# ntt-peak-detection

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/ntt_peaks/: __init__.py  __main__.py  data.py  lib.py  util.py
src/ntt_peaks/api/: __init__.py  endpoints.py
src/ntt_peaks/data/: __init__.py  size-distribution10.csv  size-distribution2.csv  size-distribution3.csv  size-distribution4.csv  size-distribution5.csv  size-distribution7.csv  size-distribution9.csv
test/: more-columns.csv  other-headers.csv  test_api.py  test_data.py  test_peak_detection.py
test/data/: size-distribution1.csv  size-distribution6.csv  size-distribution8.csv
