[project]
name = "ntt_peak_detection"
version = "0.0.1"
description = "Detect peaks in measured signals"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["signal", "peak", "detection"]
authors = [{ name = "Jannis Mainczyk", email = "jmainczyk@gmail.com" }]
dependencies = ["scipy", "plotly"]

[project.optional-dependencies]
dev = ["black"]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/jannismain/ntt_peak_detection"
"Bug Reports" = "https://github.com/jannismain/ntt_peak_detection/issues"

[project.scripts] # Optional
ntt_peaks = "ntt_peaks.__main__:cli"

[tool.setuptools]
package-data = { "ntt_peaks.data" = ["*.csv"] }

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
