[project]
name = "ntt_peaks"
version = "1.0.0"
description = "Detect peaks in measured signals"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["signal", "peak", "detection"]
authors = [{ name = "Jannis Mainczyk", email = "jmainczyk@gmail.com" }]
dependencies = ["scipy", "plotly", "fastapi[all]"]

[project.optional-dependencies]
dev = ["black", "flake8"]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/jannismain/ntt_peak_detection"
"Bug Reports" = "https://github.com/jannismain/ntt_peak_detection/issues"

[project.scripts] # Optional
ntt_peaks = "ntt_peaks.__main__:cli"

[tool.setuptools.package-data]
"*" = ["*.csv"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
